# banking-crm-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-rag.txt  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/agent/: __init__.py  graph.py  prompts.py  state.py
backend/app/agent/knowledge/: __init__.py  capabilities.py  faq_kb.py
backend/app/agent/nodes/: critic.py  faq.py  intent.py  knowledge.py  message_generator.py  planner.py  responder.py  synthesizer.py  (+1 more)
backend/app/api/: auth.py  chat.py  customers.py  health.py  knowledge.py  meta.py  outreach.py  sessions.py  tools.py  trace.py
backend/app/application/: tool_registry.py
backend/app/auth/: __init__.py  middleware.py
backend/app/db/: schema.sql  sqlite_engine.py
backend/app/domain/: __init__.py  models.py
backend/app/knowledge_base/: __init__.py  service.py
backend/app/observability/: logger.py
backend/app/scoring/: __init__.py  compliance.py  propensity.py  sentiment.py  value.py  weights.yaml
backend/app/tools/: __init__.py  compute_value.py  create_outreach_batch.py  generate_whatsapp.py  get_transactions.py  predict_propensity.py  query_customers.py  recommend_products.py  search_interactions.py
backend/new_features/: customer_financial_history.md  rbi_policies.md  rm_client_faqs.md
backend/scripts/: export_sqlite_to_csv.py
backend/tests/: test_agent_e2e.py  test_faq_routing.py  test_knowledge_base.py  test_sentiment_lang.py  test_smoke.py
(+62 files in other folders)
